--- a/new-version/css/login.css
+++ b/new-version/css/login.css
@@ -5,12 +5,12 @@ html, body, div, p, h1, h2, h3, h4, h5, h6, blockquote,ol, ul, li, dl, dt, dd, f
 body, button, input, select, textarea{font:14px/1.5 Microsoft yahei;color:#666;word-break:break-all;}
 body{min-width:1002px;}
 button,input,select, textarea{font-size:100%;}
-input, img, select {vertical-align:middle; border:none;} 
+input, img, select {vertical-align:middle; border:none;}
 iframe{display:block}
 h1, h2, h3, h4, h5, h6{ font-size:100%;font-weight:normal;}
 ul, ol, li{list-style:none;}
 address,caption,cite,code,dfn,em,th,var{font-style:normal;font-weight:500}
-code, kbd, pre, samp{font-family:courier new,courier, monospace;} 
+code, kbd, pre, samp{font-family:courier new,courier, monospace;}
 legend{color:#000000;}
 fieldset,img{border:0;}
 table{border-collapse:collapse;border-spacing:0;}
@@ -114,7 +114,7 @@ a:hover{text-decoration:none;}
 .hover_tips_con{ position:absolute; top:17px; left:50%; margin-left:-132px; padding-top:7px; display:none;}
 .hover_tips_con .border{width:250px; line-height:20px; font-size:12px; padding:5px 14px 5px 10px; background:#fff; text-align:left;}
 .hover_tips_con .arrow{width:10px; height:7px;background:url("../images/color_user_icon.png") no-repeat 0 -35px; position:absolute; top:1px; left:50%; margin-left:-5px;}
-.hover_tips_con .close{width:8px; height:7px;background:url("../images/color_user_icon.png") no-repeat -20px -35px; position:absolute; top:13px; right:5px;} 
+.hover_tips_con .close{width:8px; height:7px;background:url("../images/color_user_icon.png") no-repeat -20px -35px; position:absolute; top:13px; right:5px;}
 
 /*项目图标*/
 .item_icon{ display:inline-block; width:20px; height:20px; line-height:20px; border-radius:3px; color:#fff; font-size:14px; text-align:center; vertical-align:middle; margin-right:5px;}
@@ -159,6 +159,7 @@ a:hover{text-decoration:none;}
 .login_form .input i.phone_ico{ background-position:8px -220px;}
 .login_form .input i.email_ico{ background-position:8px -182px;}
 .login_form .input i.invite_ico{ background-position:8px -260px;}
+.code_img img{ border:1px solid #ddd; }
 .code_img a{color:#ff6803; }
 .login_form .text{width:285px; height:18px; line-height:18px; border:0px; vertical-align:top; padding:8px 0; background:#fff; +margin-top:-1px;}
 .login_form .select{width:332px; height:36px; line-height:36px; border:1px solid #ddd; vertical-align:top; background:#fff;}
