--- a/new-version/css/base.css
+++ b/new-version/css/base.css
@@ -93,6 +93,7 @@ body{ font-size: 12px; line-height: 1.8; font-family: "微软雅黑","Microsoft 
 
 .button{width:140px; height:40px; display:inline-block; line-height:40px; border-radius: 3px; cursor: pointer;}
 .btn-small{width:80px; height:30px; display:inline-block; line-height:30px; border-radius: 3px; cursor: pointer;}
+.btn-small-border{width:78px; height:28px; display:inline-block; line-height:28px; border-radius: 3px; cursor: pointer; border:1px solid #ccc;}
 .button:hover ,.button-angle ,.button-angle:hover, .btn-small:hover{ color:#fff; }
 input.button{ outline:none; border:none; }
 .btn_red{ background:#ff5d5b; }
